Add StarterHacks workshop demo

--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Inter&family=Space+Grotesk&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Inter&family=Space+Grotesk:wght@300..700&display=swap');
 
 body {
     background-color: #28282B;
@@ -14,104 +14,52 @@ ul {
     padding: 0;
 }
 
-h1 {
+h1, h2, p {
     color: white;
     font-family: 'Space Grotesk', sans-serif;
-    font-size: 3rem;
     text-align: center;
+}
+
+h1 {
+    font-size: 3rem;
+}
+
+@media (min-width: 1440px) {
+    h1 {
+        font-size: 5rem;
+    }
 }
 
 h2 {
-    color: white;
-    font-family: 'Space Grotesk', sans-serif;
     font-size: 2rem;
-    padding-top: 20px;
-    text-align: center;
 }
 
-p, label {
-    color: white;
-    padding-top: 20px;
-    text-align: center;
-}
-
-section[id="projects"] p {
-    padding-left: 20px;
-    padding-right: 20px;
-}
-
-form {
-    text-align: center;
-}
-
-input, textarea {
-    border-radius: 5px;
-    padding: 10px;
-    width: 200px;
-    border: none;
-    margin-left: 20px;
-}
-
-textarea {
-    height: 100px;
-}
-
-button {
-    background-color: #FFD700;
-    border: none;
-    border-radius: 5px;
+p {
+    font-family: 'Inter', sans-serif;
     padding: 0 20px;
 }
 
-button:hover {
-    background-color: #ff5900;
-    cursor: pointer;
+img {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    border-radius: 100px;
+    width: 200px;
+    height: 200px;
 }
 
 .nav-item {
     display: inline;
-    padding: 0 20px;
 }
 
 .link {
     color: #FFD700;
-    text-decoration: none;
 }
 
 .link:hover {
-    color: #ff5900;
-}
-
-.project-img {
-    width: 300px;
-    height: 200px;
-    display: block;
-    margin: 0 auto;
+    color: #FF5900;
 }
 
 .project-link {
     text-align: center;
-}
-
-.form-input {
-    padding: 20px;
-}
-
-.button-text {
-    color: #28282B;
-    font-family: Inter, sans-serif;
-    padding: 0;
-}
-
-.footer-text {
-    padding-bottom: 20px;
-}
-
-#headshot {
-    border-radius: 100px;
-    width: 200px;
-    height: 200px;
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
 }
